[package]
name = "dd_rpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.8.3"
dotenvy = "0.15.7"
hex = "0.4.3"
jwt-simple = { version = "0.12.7", default-features = false, features = ["pure-rust"] }
lettre = {version = "0.11.4", features = ["rustls-tls"]}
rand = "0.8.5"
secp256k1 = {version = "0.28.2", features = ["rand", "global-context"]}
serde = {version = "1.0.195", features = ["derive"]}
siwe = { git = "https://github.com/crypdoughdoteth/siwe-rs", rev = "9f4a603a7dddb26f4fdabfde563927f856ff3405", features = ["alloy", "serde"] }
sonic-rs = "0.4.0"
sqlx = {version = "0.8", features = ["postgres", "macros", "runtime-tokio", "tls-rustls", "time"]}
time = {version = "0.3.36" , features = ["serde"]}
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros"]}
tokio-test = "0.4.3"
tower-http = {version = "0.5.1", features = ["cors"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
alloy = {version = "0.2.0", features = ["node-bindings", "network", "rpc-types"]}
thiserror = "1.0.63"
mimalloc = "0.1.45"
hyper = "1.6.0"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = {version = "0.12.5", features = ["json", "rustls-tls", "cookies", "stream"]}
http-body-util = "0.1"

[dev-dependencies]
alloy = {version = "0.2.0", features = ["node-bindings", "network", "rpc-types", "signer-local"]}

[features]
dev = []

[profile.release]
# debug = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
