[package]
name = "dd_rpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.8.3"
dotenvy = "0.15.7"
hex = "0.4.3"
jwt-simple = { version = "0.12.7", default-features = false, features = ["pure-rust"] }
lettre = {version = "0.11.4", features = ["rustls-tls"]}
openssl = {version = "0.10.72", features = ["vendored"]}
rand = "0.8.5"
secp256k1 = {version = "0.28.2", features = ["rand", "global-context"]}
serde = {version = "1.0.195", features = ["derive"]}
siwe = { git = "https://github.com/crypdoughdoteth/siwe-rs", rev = "407f2e917185bc88ae70c65a5e4f92acf015779b", features = ["alloy", "serde"] }
sqlx = {version = "0.8", features = ["postgres", "macros", "runtime-tokio", "tls-rustls", "time", "uuid"]}
time = {version = "0.3.36" , features = ["serde"]}
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros"]}
tokio-test = "0.4.3"
tower-http = {version = "0.5.1", features = ["cors"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
alloy = {version = "1.0", features = ["node-bindings", "network", "rpc-types"]}
thiserror = "1.0.63"
mimalloc = "0.1.45"
hyper = "1.6.0"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = {version = "0.12.5", features = ["json", "rustls-tls", "cookies", "stream"]}
http-body-util = "0.1"
serde_json = "1.0.140"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
url = "2.5.4"

[dev-dependencies]
alloy = {version = "1.0", features = ["node-bindings", "network", "rpc-types", "signer-local"]}
criterion = { version = "0.5", features = ["async", "async_tokio", "html_reports"] }

[[bench]]
name = "bench"
harness = false

[features]
dev = []

[profile.release]
# debug = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
