[package]
name = "dd_rpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.8.3", features = ["ws", "macros"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
lettre = {version = "0.11.4", features = ["rustls-tls"]}
openssl = {version = "0.10.72", features = ["vendored"]}
rand = "0.10" 
serde = {version = "1.0.195", features = ["derive"]}
siwe = { git = "https://github.com/futex-labs/siwe", rev = "1459e6ab72932bfdba79f4f950000cedebf86496", features = ["alloy", "serde"] }
sqlx = {version = "0.8", features = ["postgres", "macros", "runtime-tokio", "tls-rustls", "time", "uuid"]}
time = {version = "0.3.36" , features = ["serde"]}
tokio = {version = "1.47.1", features = ["rt-multi-thread", "macros"]}
tokio-test = "0.4.3"
tower-http = {version = "0.6.9", features = ["cors"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
alloy = {version = "2.0.4", features = ["node-bindings", "network", "rpc-types"]}
thiserror = "2.0.18"
mimalloc = "0.1.45"
url = "2.5.8"
reqwest = { version = "0.13.3", features = ["json", "cookies", "stream"] }
http-body-util = "0.1"
serde_json = "1.0.140"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
http = "1.3.1"
futures-util = "0.3.31"

[dev-dependencies]
alloy = {version = "2.0", features = ["node-bindings", "network", "rpc-types", "signer-local"]}
criterion = { version = "0.5", features = ["async", "async_tokio", "html_reports"] }

[[bench]]
name = "bench"
harness = false

[features]
dev = []

[profile.release]
# debug = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
